# ResonanceOS

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  business_content_marketing.html  corpus_analysis.html  data_processing.html  demo.py  docker-compose.yml  fastapi_server.html  hrv_constants.html  index.html  integration_api_integration.html  profile_creation.html  pyproject.toml  requirements.txt  setup.py  styles.css  system_runner.py  test_runner.py  testing_unit_tests.html  tutorial_profile_mastery.html
docs/: _config.yml  demo.html  (+54 more)
resonance_os/: .env.example  README.md  __init__.py  pyproject.toml
resonance_os/api/: __init__.py  hr_server.py
resonance_os/cli/: __init__.py  hr_main.py
resonance_os/core/: __init__.py  hrv_constants.py  hrv_types.py
resonance_os/data/: README.md  SETUP_GUIDE.md
resonance_os/data/config/: README.md  default_profiles.json  model_settings.json  system_config.json
resonance_os/data/corpora/: README.md
resonance_os/data/exports/: README.md
resonance_os/data/models/: README.md
resonance_os/data/profiles/: README.md
resonance_os/data/samples/: README.md
resonance_os/data/scripts/: README.md  batch_processor.py  corpus_analyzer.py  data_processing.py  profile_generator.py
resonance_os/docs/: Resonance Writer AI.html  api_reference.md  architecture.md  examples.md  quick_start.md  structure.md
resonance_os/docs/Resonance Writer AI_files/: js  root-jrquiwh8.css  saved_resource.html
resonance_os/evolution/: hr_rl_trainer.py  resonance_reward_model.py
resonance_os/generation/: __init__.py  hrf_model.py  human_resonant_writer.py  planner_layer.py  refiner_layer.py  sentence_layer.py
resonance_os/notebooks/: resonance_os_deep_architecture.ipynb
resonance_os/profiles/: __init__.py  hrv_extractor.py  multi_tenant_hr_profiles.py
resonance_os/resonance_os/: __init__.py
resonance_os/resonance_os/api/: endpoints.py  fastapi_server.py
resonance_os/resonance_os/cli/: main.py
resonance_os/resonance_os/core/: config.py  constants.py  logging.py  types.py
resonance_os/tests/: README.md  TEST_SUMMARY.md  __init__.py  run_all_tests.py  test_api_hr_server.py  test_cli_hr_main.py  test_core_hrv_constants.py  test_core_hrv_types.py  test_edge_cases.py  test_generation_hrf_model.py  test_generation_human_resonant_writer.py  test_generation_planner_layer.py  test_generation_refiner_layer.py  test_generation_sentence_layer.py  test_integration.py  test_performance.py  test_profiles_hrv_extractor.py  test_profiles_multi_tenant_hr_profiles.py
resonance_os/utils/: hrv_utils.py  text_emotion_tools.py
(+127 files in other folders)
