[tool.poetry]
name = "resonance_os_v6"
version = "6.0.0"
description = "ResonanceOS v6 - Human-Resonant AI Writing Engine"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
torch = "^2.1"
transformers = "^4.35"
spacy = "^3.6"
textblob = "^0.17.1"
faiss-cpu = "^1.7"
fastapi = "^0.111"
uvicorn = "^0.24"
stable-baselines3 = "^2.0"
gym = "^0.26"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
